# NErlNet

./: .gitignore  .gitmodules  CITATION.cff  CMakeLists.txt  Dockerfile  LICENSE  NerlDesigner.sh  NerlNet_subnets_config  NerlnetBuild.sh  NerlnetGetData.sh  NerlnetInstall.sh  NerlnetJupyterEnvGenerator.sh  NerlnetJupyterLaunch.sh  NerlnetMonitor.sh  NerlnetPlanner.sh  NerlnetRun.sh  NerlnetSpliterCSV.sh  NerlnetStartup.sh  NerlnetTest.sh  NerlnetTestopennnNIFPP.sh  README.md  REPO_REVIEW.md  build.sh  buildNerlnet.sh  dc_ori_worker.json  installNerlnet.sh  jsonDir  jsonPath  jsonPath4  killPorts.sh  opennnNIFTest.sh  parse_mnist.ipynb  ter  worker_cnn_mnist.json  worker_mnist_16.json  worker_mnist_cnn_new.json
.github/: CODEOWNERS
.github/workflows/: pr.yml  update_image.yml
GUI/: demo.erl  demo_html_tagger.erl  ex_pickers.erl
JupyterLabDir/: map.json
JupyterLabDir/.ipynb_checkpoints/: Untitled-checkpoint.ipynb
Test/: FullFlowTest.sh  set_env.sh
Tests/: FullFlowTest.sh  NerlnetFullFlowTest.sh  NerlnetNifTest.sh  set_env.sh
Tests/inputJsonsFiles/: arch_test_synt_1d_2c_1s_4r_4w.json.noip  exp_test_synt_1d_2c_1s_4r_4w.json
agent_plans/: libtorch_capability_steps.md  torch_bridge_integration_plan.md
config/: inputDataDir.nerlconfig  jsonDir.nerlconfig  jsonsDir.nerlconfig  subnets.nerlconfig
docs/: CODE_OF_CONDUCT.md  CONTRIBUTING.md
examples/: ExampleOfAPI.ipynb  NerlnetExperiment.ipynb  Ohad_and_Noa_ex1.ipynb  Untitled.ipynb  example_run.ipynb  simple_run.ipynb
examples/AEC/: AEC_Exp.ipynb
examples/EEG/: 18Device_11people_2Tp_12Ep_Slots_FL.ipynb  18Device_12people_RR_4Tp.ipynb  18Device_12people_RR_4Tp_Norm.ipynb  18Device_24people_RR_8Tp_9Ep_Norm_CE.ipynb  18Device_24people_RR_8Tp_9Ep_Slots.ipynb  18Device_24people_RR_8Tp_Norm.ipynb  18Device_6people_RR_1Tp.ipynb  18Device_6people_RR_2Tp-test_CM.ipynb  18Device_6people_RR_2Tp.ipynb  1Device_1people_1Tp_slots_test.ipynb  1Device_2people_RR_2Tp_9Ep_Norm_CE.ipynb  1Device_check_data.ipynb  3Device_overffiting.ipynb  Example_17Device_3Person_RR.ipynb  Example_18Device_3Person_RR.ipynb  Example_1Device_3Persons.ipynb  Example_4Device_3Persons.ipynb  Example_8Device_3Person_RR(Noa).ipynb  Example_8Device_3Persons-60HZ.ipynb  Example_8Device_3Persons-RR.ipynb  Example_8Device_3Persons-demo_RR.ipynb  Example_8Device_3Persons.ipynb  Example_8Device_8w_3Persons-RR.ipynb  Noa_test_22.5.24.ipynb  Ohad_and_Noa_ex1.ipynb  build_data.ipynb  conclusion_discretization.ipynb  conclusion_normalization.ipynb  confusion_matrix_test_Casting.ipynb  example_run.ipynb  exp1_eeg_freq.ipynb
examples/mnistExample/: parse_mnist.ipynb
examples/syntetic_norm/: NerlnetExampleSynt.ipynb  README.md  set_jupyter_env.py
examples/tiles3_mnist_example/: conn_4Router12Client4S.json  dc_12w_12c_13d_4s_4r_tiles_rr.json  exp_tiles_13d_12c_4s_4r_12w_rr.json  tiles_3_multiple_training.ipynb
experiments_results/discretization/: conf_mats1.json  conf_mats2.json  conf_source1.json  conf_source2.json  missed_batches_train_1.json  missed_batches_train_2.json  missed_batches_train_3.json  missed_batches_train_4.json  missed_batches_train_5.json  missed_batches_train_6.json  missed_batches_train_7.json  missed_batches_train_8.json  recieved_batches_train_1.json  recieved_batches_train_2.json  recieved_batches_train_3.json  recieved_batches_train_4.json  recieved_batches_train_5.json  recieved_batches_train_6.json  recieved_batches_train_7.json  (+3 more)
inputJsonFiles/: inputJsonFiles  jsonArch1PC1Workers.json  jsonArch1PC1WorkersFed.json  jsonArch1PC2workers.json  jsonArch1PC2workers2Sources.json  jsonArch1PC2workers2SourcesFed.json  jsonArch1PC2workers2sensors.json  jsonArch1PC2workersFed.json
src_cpp/: CMakeLists.txt  SConstruct  nerltest.cpp  nifModule_nif.cpp  test.cpp
src_cpp/common/: CMakeLists.txt  bridgeController.h  common_definitions.h  nerlLayer.cpp  nerlLayer.h  nerlWorker.cpp  nerlWorker.h  nerlWorkerFunc.h  nerltensor.h  sourceCsv.cpp  utilities.cpp  utilities.h  worker_definitions_ag.h
src_cpp/cppBridge/: NerlNIF.cpp  nifModule_nif.cpp
src_cpp/cppBridge/include/: bridgeController.h
src_cpp/opennnBridge/: Autoencoder.h  CMakeLists.txt  CustumNN.h  ModelParams.cpp  ModelParams.h  NerlNIFziv.cpp  ae_red.cpp  ae_red.h  bridgeController.h  choose_activation_function.h  create.h  decode_nerltensor_nif.h  definitionsNN.h  eigenTensorTypes.h  encode_nerltensor_nif.h  get_set_weights.h  helpFunc.h  nerlLayer.cpp  nerlLayer.h  nerlWorker.cpp  nerlWorker.h  nerlWorkerNIF.h  nerlWorkerOpenNN.cpp  nerlWorkerOpenNN.h  nerlworker.cpp  nerlworker.h  nifppEigenExtensions.h  nifppNerltensorEigen.h  niftest.h  openNNExtensionFunction.h  openNNmodelNif.h  openNNnif.cpp  openNNnif.h  operations_nerltensor_nif.h  support.h  tmp.cpp  train.h  worker_definitions_ag.h
src_cpp/opennnBridge/include/: CustumNN.h  FreeNN.h  ModelParams.h  convert.cpp  convert.h  create.h  definitionsNN.h  get_set_weights.h  helpFunc.h  nifpp.h  nifppEigenExtensions.h  niftest.h  train.h
src_cpp/source/: CMakeLists.txt  Source.h  SourceCSV.cpp  SourceCSV.h  SourceNIF.cpp  SourceNIF.h
src_cpp/sourceDriver/: CMakeLists.txt  CsvHandler.cpp  CsvHandler.h  SourceCsv.h  SourceDriver.cpp  SourceDriver.h  sourceCsv.cpp  sourceCsv.h
src_cpp/torchBridge/: CMakeLists.txt  NerlWorkerTorch.cpp  NerlWorkerTorch.h  NerlWorkerTorchNIF.h  Readme.md  TensorCodec.cpp  TensorCodec.h  nerltensorTorchDefs.h  nifppNerlTensorTorch.h  torchNIF.cpp  torchNIF.h
src_cpp/wolframBridge/: CMakeLists.txt  start.cpp
src_erl/: NErlNet.erl  csv_parser.erl  erlModule.erl  nerlNetStatem.erl  nerlnet.erl  niftest.erl  parse.erl  startMod.erl
src_py/: BuildScript.py  NerlNetController.py  SConstruct  apiServer.py  conda_requirements.txt  expiremntFLow.py  flow_example.ipynb  main.py  pipReqs.txt  req.txt  reqCleaned.txt  requirements.txt  splitter.py
startup initiator/: readme  startUp.sh
tests/: NerlnetFullFlowTest.sh  NerlnetFullFlowTestPost.sh  NerlnetFullFlowTorchTest.sh  NerlnetFullFlowTorchTestPost.sh  NerlnetNIFTorchTest.sh  NerlnetNifTest.sh  NerlnetSourceNifTest.sh  set_env.sh
(+731 files in other folders)
